Adiciona hobbies e aprendizado

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     
     <h2>Objetivo</h2>
     <p>Estou praticando Git, GitHub, HTML básico e JavaScript.</p>
+
+    <h2>Hobbies</h2>
+    <ul>
+        <li>Programação</li>
+        <li>Estudos online</li>
+        <li>Espanhol</li>
+        <li>Músicas</li>
+        <li>Jogos e esportes</li>
+    </ul>
+
+    <h2>Aprendizado</h2>
+    <p>Estou aprendendo Git, GitHub, HTML básico e JavaScript para controlar versões e criar páginas web simples.</p>
     
 </body>
 </html>
